Fri Aug  2 17:27:12 2002  Ossama Othman  <ossama@uci.edu>

	* docs/releasenotes/index.html:

	  Updated load balancer release notes.

Fri Aug  2 16:51:23 2002  Ossama Othman  <ossama@uci.edu>

	* orbsvcs/orbsvcs/PortableGroup/Portable_Group_Map.cpp:

	  Removed all explicit template instantiations for old style
	  ACE_Hash_Map_Manager.  They aren't needed.  This may also
	  address the strange unresolved symbol link-time errors since the
	  old style hash map templates inherit from the "_Ex" versions.

Fri Aug  2 15:13:28 2002  Douglas C. Schmidt  <schmidt@macarena.cs.wustl.edu>

	* docs/configurations.html: Added a documentation entry for the
	  Real-time CORBA thread pool model.

Fri Aug  2 16:17:34 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* orbsvcs/orbsvcs/PortableGroup/Portable_Group_Map.cpp: Added a
	  missing template instantiation. Should fix problems in 

Fri Aug  2 11:35:17 2002  Ossama Othman  <ossama@uci.edu>

	* docs/interceptors.html:

	  Updated CORBA spec URLs.

Fri Aug  2 08:44:19 2002  Priyanka Gontla  <pgontla@ece.uci.edu>

	* orbsvcs/PSS/PSDL_Struct_Visitor.cpp (gen_code_for_si): 
	  Filled in information to the structure that will be
	  generated.

	* orbsvcs/examples/PSS/client.cpp (main): 
	  Fixed the warning in GCC 3.0 build.

Fri Aug  2 07:38:00 2002  Ossama Othman  <ossama@uci.edu>

	* orbsvcs/orbsvcs/LoadBalancing/LB_ServerRequestInterceptor.cpp
	  (receive_request_service_contexts):

	  Parenthesize expression to clarify precedence.

Fri Aug  2 09:11:27 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

        * tao/ValueFactory_Map.h:
	* tao/ORB_Core.h: Removed a ; that was not required after
	  TAO_SINGLETON_DECLARE.  TRU64 gives warnings with that extra ;. 

Fri Aug  2 00:29:43 2002  Balachandran Natarajan  <bala@cs.wustl.edu>

	* tao/Bind_Dispatcher_Guard.i : 
	* tao/Bind_Dispatcher_Guard.cpp: Moved the destructor from the
	  inline file to the cpp file. Sounds crazy, but true. g++ seems